[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mvr-api-client"
version = "6.32.0"
description = "Python client for the MVR API relational-readiness layer"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"

authors = [
  { name = "African Market OS", email = "info@africanmarketos.com" }
]

keywords = [
  "mvr",
  "api",
  "minimum-viable-relationships",
  "relational-readiness",
  "market-permission",
  "mcp",
  "openapi",
  "ai-agents",
  "african-market",
  "emerging-markets"
]

dependencies = [
  "requests>=2.25.0",
  "pydantic>=1.8,<3.0"
]

[project.urls]
Homepage = "https://github.com/africanmarketos591/mvr-api-py-client"
Repository = "https://github.com/africanmarketos591/mvr-api-py-client"
Issues = "https://github.com/africanmarketos591/mvr-api-py-client/issues"
Documentation = "https://africanmarketos.com/AGENTS.md"
OpenAPI = "https://africanmarketos.com/api/openapi.agent.json"
MCP = "https://registry.modelcontextprotocol.io/v0/servers?search=io.github.africanmarketos591%2Fmvr-api"

[tool.setuptools.packages.find]
where = ["."]
include = ["mvr_api*"]

